# anteam

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
.claude/rules/: backend.rules  frontend.rules  git.rules
backend/: Makefile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: admin.py  auth.py  channel.py  deps.py  dm.py  message.py  websocket.py  workspace.py
backend/src/core/: config.py
backend/src/db/: database.py
backend/src/models/: __init__.py  channel.py  conversation.py  message.py  user.py  workspace.py
backend/src/repository/: channel_repository.py  conversation_repository.py  message_repository.py  user_repository.py  workspace_repository.py
backend/src/schemas/: channel.py  conversation.py  message.py  user.py  user_admin.py  workspace.py
backend/src/service/: auth_service.py
backend/tests/: test_admin.py  test_auth.py
docs/: Slack 风格聊天系统 - 技术产品设计文档.md  Slack 风格聊天系统 - 简化版技术方案.md  openapi.yaml
frontend/: .eslintrc.cjs  Makefile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  axios.ts  channel.ts  dm.ts  message.ts  workspace.ts
frontend/src/pages/admin/: AdminLayout.tsx  UserFormModal.tsx  UserManagePage.tsx
frontend/src/pages/channel/: ChannelListPage.tsx  ChannelPage.tsx
frontend/src/pages/dm/: DMListPage.tsx  DMPage.tsx
frontend/src/stores/: adminSlice.ts  channelSlice.ts  conversationSlice.ts  index.ts  messageSlice.ts  workspaceSlice.ts
frontend/src/types/: admin.ts
hooks/: pre-commit
openspec/changes/omega-admin-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/workspace-feature/: design.md  proposal.md  tasks.md
(+15 files in other folders)
